ユーザー系のAPI整理
